SOLID + interfete pentru service (DIP)